--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ Spacer
 ============================= */
 
 #spacer1{	
-	background-image: url(../img/spacer/1.jpg);
+	background-image: url(../img/spacer/raspberrypi.JPG);
 }
 #spacer2{	
 	background-image: url(../img/spacer/2.jpg);
