changed bg colour

--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,7 @@ Intro
 #intro{
     height:635px;
     width:100%;
-    background-color: #529abb;
+    background-color: #ecb512;
     background-image: url(../img/bg-mac.png);
     background-position:center;
     background-repeat:no-repeat;
