--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,10 @@ Additional styles
 	color:#FFFFFF;
 }
 
+.textshadow {
+	text-shadow: 2px 2px #000000;
+}
+
 /* ================================
 Home sections
 ================================= */
